--- a/parser-update.ipynb
+++ b/parser-update.ipynb
@@ -122,7 +122,7 @@
     "                    'jose_gonzalez_calvaire', 'ariana_grande', 'gallant', 'wheein', 'jeremy_zucker', 'mkto', \n",
     "                    'grouplove', 'post_malone', 'drake', 'lucky_daye', 'swmrs', 'bruno_mars', 'kendrick_lamar', \n",
     "                    'keshi', 'led_zeppelin', 'joji', 'justin_bieber', 'backseat_lovers', 'trey_songz', 'doja_cat', \n",
-    "                    'shinedown', 'excision', 'kanye', 'village_people']\n",
+    "                    'ciara', 'excision', 'little mix', 'village_people']\n",
     "num_runs = 2\n",
     "num_splits = 3"
    ]
