generating both full and split motion chunks

--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -85,6 +85,33 @@
     "                'RIGHT_KNEE_DIST', 'LEFT_ANKLE_POS', 'LEFT_ANKLE_DIST', 'RIGHT_ANKLE_POS', 'RIGHT_ANKLE_DIST']\n",
     "            df = pd.read_csv(file_name, sep = ',', usecols=[4, 7, 12, 13, 14, 15, 16, 17, 24, 25, 26, 27, 28, 29])\n",
     "\n",
+    "            # Create full chunks -- used for tempo extraction\n",
+    "            x_data = pd.DataFrame(columns=df_columns, index=range(len(df)))\n",
+    "            y_data = pd.DataFrame(columns=df_columns, index=range(len(df)))\n",
+    "\n",
+    "            for node in pose_landmark_subset:\n",
+    "                curr = df[node]\n",
+    "                vals = [split_ele(x) for x in curr]\n",
+    "                for row in range(len(vals)):\n",
+    "                    colname_pos = node + \"_POS\"\n",
+    "                    colname_dist = node + \"_DIST\"\n",
+    "\n",
+    "                    if(row == 0):\n",
+    "                        x_data[colname_dist][row] = 0\n",
+    "                        y_data[colname_dist][row] = 0\n",
+    "                    else:\n",
+    "                        x_data[colname_dist][row] = vals[row][0] - vals[row-1][0]\n",
+    "                        y_data[colname_dist][row] = vals[row][1] - vals[row-1][1]\n",
+    "\n",
+    "                    x_data[colname_pos][row] = vals[row][0]\n",
+    "                    y_data[colname_pos][row] = vals[row][1]\n",
+    "\n",
+    "            x_data_file_write = \"preprocessed/\"+str(file_num) + \"_\" + file_song + \"_\"+file_artist+\"_XDATA.csv\"\n",
+    "            x_data.to_csv(x_data_file_write)\n",
+    "            y_data_file_write = \"preprocessed/\"+str(file_num) + \"_\" + file_song + \"_\"+file_artist+\"_YDATA.csv\"\n",
+    "            y_data.to_csv(y_data_file_write)  \n",
+    "            \n",
+    "            # Create split chunks -- used for non-tempo feature prediction\n",
     "            splitDf = np.array_split(df, num_splits)\n",
     "            \n",
     "            for subDf in range(len(splitDf)):\n",
