--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "f868738e",
+   "execution_count": 1,
+   "id": "872df829",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,8 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "cc98439d",
+   "execution_count": 2,
+   "id": "4860e24b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,8 +30,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "7f5d64da",
+   "execution_count": 3,
+   "id": "b4542475",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,32 +46,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "4a0d57e2",
+   "execution_count": 4,
+   "id": "18709548",
    "metadata": {},
    "outputs": [],
    "source": [
-    "song_name_list = ['love_girl', 'party_rock_anthem', 'lite_spots', 'girlfriends_best_friend', 'scaredy_cat', \n",
-    "                  'girl_anachronism', 'lil_darlin', 'el_invento', 'test_drive', 'weight_in_gold', 'easy', 'comethru', \n",
-    "                  'classic', 'tongue_tied', 'motley', 'knife_talk', 'feed_the_fire', 'lose_it', 'thats_what_i_like', \n",
-    "                  'humble', 'skeletons', 'stairway_to_heaven', 'slow_dancing_in_the_dark', 'peaches', 'kilby_girl', \n",
-    "                  'jupiter_love', 'woman', 'get_up', 'throwin_elbows', 'power', 'ymca', 'all_i_wanna_do', 'easily',\n",
-    "                  'feed_the_fire', 'fool_around','good_4_u', 'knife_talk', 'levitating', 'sad_girlz_luv_money',\n",
-    "                  'tik_tok', 'a_thousand_miles']\n",
-    "artist_name_list = ['cnblue', 'lmfao', 'kaytranada', 'walkabout', 'dpr_ian', 'the_dresden_dolls', 'count_basie', \n",
-    "                    'jose_gonzalez_calvaire', 'ariana_grande', 'gallant', 'wheein', 'jeremy_zucker', 'mkto', \n",
-    "                    'grouplove', 'post_malone', 'drake', 'lucky_daye', 'swmrs', 'bruno_mars', 'kendrick_lamar', \n",
-    "                    'keshi', 'led_zeppelin', 'joji', 'justin_bieber', 'backseat_lovers', 'trey_songz', 'doja_cat', \n",
-    "                    'ciara', 'excision', 'little mix', 'village_people', 'jay_park', 'bruno_major', 'lucky_daye',\n",
-    "                    'yas', 'olivia_rodrigo', 'drake', 'dua_lipa', 'amaarae', 'kesha', 'vanessa_carlton']\n",
-    "num_runs = 9\n",
+    "song_name_list = ['love_girl', 'party_rock_anthem', 'lite_spots', 'girlfriends_best_friend', 'scaredy_cat', 'girl_anachronism', 'lil_darlin', 'el_invento', 'test_drive', 'weight_in_gold', 'easy', 'comethru', 'classic', 'tongue_tied', 'motley', 'knife_talk', 'feed_the_fire', 'lose_it', 'thats_what_i_like', 'humble', 'skeletons', 'stairway_to_heaven', 'slow_dancing_in_the_dark', 'peaches', 'kilby_girl', 'jupiter_love', 'woman', 'get_up', 'throwin_elbows', 'power', 'ymca']\n",
+    "artist_name_list = ['cnblue', 'lmfao', 'kaytranada', 'walkabout', 'dpr_ian', 'the_dresden_dolls', 'count_basie', 'jose_gonzalez_calvaire', 'ariana_grande', 'gallant', 'wheein', 'jeremy_zucker', 'mkto', 'grouplove', 'post_malone', 'drake', 'lucky_daye', 'swmrs', 'bruno_mars', 'kendrick_lamar', 'keshi', 'led_zeppelin', 'joji', 'justin_bieber', 'backseat_lovers', 'trey_songz', 'doja_cat', 'shinedown', 'excision', 'kanye', 'village_people']\n",
+    "num_runs = 3\n",
     "num_splits = 3\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1c6ffa4c",
+   "execution_count": 5,
+   "id": "3fbccc10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,33 +90,6 @@
     "                'RIGHT_KNEE_DIST', 'LEFT_ANKLE_POS', 'LEFT_ANKLE_DIST', 'RIGHT_ANKLE_POS', 'RIGHT_ANKLE_DIST']\n",
     "            df = pd.read_csv(file_name, sep = ',', usecols=[4, 7, 12, 13, 14, 15, 16, 17, 24, 25, 26, 27, 28, 29])\n",
     "\n",
-    "            # Create full chunks -- used for tempo extraction\n",
-    "            x_data = pd.DataFrame(columns=df_columns, index=range(len(df)))\n",
-    "            y_data = pd.DataFrame(columns=df_columns, index=range(len(df)))\n",
-    "\n",
-    "            for node in pose_landmark_subset:\n",
-    "                curr = df[node]\n",
-    "                vals = [split_ele(x) for x in curr]\n",
-    "                for row in range(len(vals)):\n",
-    "                    colname_pos = node + \"_POS\"\n",
-    "                    colname_dist = node + \"_DIST\"\n",
-    "\n",
-    "                    if(row == 0):\n",
-    "                        x_data[colname_dist][row] = 0\n",
-    "                        y_data[colname_dist][row] = 0\n",
-    "                    else:\n",
-    "                        x_data[colname_dist][row] = vals[row][0] - vals[row-1][0]\n",
-    "                        y_data[colname_dist][row] = vals[row][1] - vals[row-1][1]\n",
-    "\n",
-    "                    x_data[colname_pos][row] = vals[row][0]\n",
-    "                    y_data[colname_pos][row] = vals[row][1]\n",
-    "\n",
-    "            x_data_file_write = \"preprocessed/\"+str(file_num) + \"_\" + file_song + \"_\"+file_artist+\"_XDATA.csv\"\n",
-    "            x_data.to_csv(x_data_file_write)\n",
-    "            y_data_file_write = \"preprocessed/\"+str(file_num) + \"_\" + file_song + \"_\"+file_artist+\"_YDATA.csv\"\n",
-    "            y_data.to_csv(y_data_file_write)  \n",
-    "            \n",
-    "            # Create split chunks -- used for non-tempo feature prediction\n",
     "            splitDf = np.array_split(df, num_splits)\n",
     "            \n",
     "            for subDf in range(len(splitDf)):\n",
@@ -161,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35ea37ce",
+   "id": "c0af0aeb",
    "metadata": {},
    "outputs": [],
    "source": []
