Delivering final recommendations

--- a/regression_song_matching.ipynb
+++ b/regression_song_matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,12 +13,13 @@
     "from spotipy.oauth2 import SpotifyClientCredentials\n",
     "from spotipy.oauth2 import SpotifyOAuth\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import r2_score\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +52,7 @@
       "Train Score: \n",
       "1.0\n",
       "Test Score: \n",
-      "-29.30024986822348\n"
+      "-36.65603449895221\n"
      ]
     }
    ],
@@ -69,32 +70,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 8.80519912e-01 -1.30215355e-01 -2.00908315e+01 ... -3.41310741e-01\n",
-      "   2.42025064e-01  1.86613938e+02]\n",
-      " [ 1.24335129e+00  1.99433220e-01 -1.79766603e+01 ...  2.14288359e-02\n",
-      "  -3.98414154e-01  2.17127951e+02]\n",
-      " [ 4.65918534e-01 -1.09349458e-01 -1.89082686e+01 ...  2.93421374e-01\n",
-      "  -1.87447874e+00  2.54340469e+02]\n",
+      "[[ 1.09571294e+00  1.42835848e+00  1.97570941e+01 ... -6.96114160e-01\n",
+      "   3.47604777e+00  1.03970038e+02]\n",
+      " [ 6.83445505e-01  3.01866439e-02 -1.70454442e+01 ... -4.43303621e-02\n",
+      "  -1.35815791e+00  1.47521557e+02]\n",
+      " [ 5.56722379e-01  6.01548090e-01 -1.00055536e+00 ...  2.49464078e-01\n",
+      "   1.55573115e-01  1.58810049e+02]\n",
       " ...\n",
-      " [ 8.96992044e-01  6.57714617e-01  8.11629843e-01 ...  5.58951827e-01\n",
-      "   8.06016537e-01  1.80903202e+02]\n",
-      " [ 8.37952043e-01 -1.09711639e-01 -2.34524785e+01 ...  1.68459591e-01\n",
-      "  -4.13046967e-01  1.08741206e+02]\n",
-      " [ 1.01526882e+00  4.15053345e-02 -4.19289041e+00 ...  7.58863631e-02\n",
-      "   1.48213148e-02  2.05433556e+02]] \n",
+      " [ 5.76415570e-01 -8.27877147e-01 -3.03824824e+01 ...  4.35681757e-01\n",
+      "  -1.35619357e+00 -2.93997955e+01]\n",
+      " [-4.74748725e-01  2.22125773e+00 -6.33163190e+00 ...  1.26127971e+00\n",
+      "   7.03263437e-01  3.29122094e+01]\n",
+      " [-1.03224288e+00  1.78930843e+00  1.31631776e+01 ...  1.13275272e+00\n",
+      "   1.40323296e+00 -1.40073300e+02]] \n",
       "\n",
       "\n",
       "\n",
-      "[ 8.80519912e-01 -1.30215355e-01 -2.00908315e+01  7.56437905e-02\n",
-      "  7.62148299e-01  8.05315030e-02 -3.41310741e-01  2.42025064e-01\n",
-      "  1.86613938e+02]\n"
+      "[  1.09571294   1.42835848  19.75709411  -1.19918136  -0.61498003\n",
+      "  -0.16833623  -0.69611416   3.47604777 103.97003838]\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +192,30 @@
     "    '20':('ymca','village_people'),\n",
     "    '21':('intuition_interlude','jamie_foxx'),\n",
     "    '22':('kilby_girl','the_backseat_lovers'),\n",
-    "    '23':('a_thousand_miles','vanessa_carlton')\n",
-    "}                "
+    "    '23':('party_rock_anthem','lmfao'),\n",
+    "    '24':('frozen','sabrina_claudio'),\n",
+    "    '25':('weve_never_met_but_can_we_have_a_cup_of_coffee_or_something','in_love_with_a_ghost'),\n",
+    "    '26':('piano_song','eryn_allen_kane'),\n",
+    "    '27':('tacones_rojos','sebastian_yatra'),\n",
+    "    '28':('face_to_face','rex_orange_county'),\n",
+    "    '29':('violin_concerto_no_1_in_a_minor','johann_sebastian_bach'),\n",
+    "    '30':('candy','baekhyun'),\n",
+    "    '31':('whisper','boombox_cartel'),\n",
+    "    '32':('in_the_name_of_love','martin_garrix'),\n",
+    "    '33':('brukka','jack_and_lewis'),\n",
+    "    '34':('bum_bum_tam_tam','mc_fioti'),\n",
+    "    '35':('partition','beyonce'),\n",
+    "    '36':('greedy','ariana_grande'),\n",
+    "    '37':('idontwannabeyouanymore','billie_eilish'),\n",
+    "    '38':('lost_in_japan','shawn_mendes'),\n",
+    "    '39':('the_saints','andy_mineo'),\n",
+    "    '40':('dynamite','bts')\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +267,23 @@
       "('ymca', 'village_people', [0.715, 0.951, -6.488, 0.132, 0.152, 0, 0.302, 0.671, 126.643])\n",
       "('intuition_interlude', 'jamie_foxx', [0.676, 0.412, -11.343, 0.0913, 0.0424, 8.91e-06, 0.0609, 0.565, 168.05])\n",
       "('kilby_girl', 'the_backseat_lovers', [0.329, 0.444, -9.973, 0.0417, 0.0578, 0.0352, 0.113, 0.225, 162.279])\n",
-      "('a_thousand_miles', 'vanessa_carlton', [0.56, 0.825, -3.862, 0.0379, 0.323, 0, 0.161, 0.268, 94.931])\n"
+      "('party_rock_anthem', 'lmfao', [0.75, 0.727, -4.21, 0.142, 0.0189, 0, 0.266, 0.359, 129.993])\n",
+      "('frozen', 'sabrina_claudio', [0.486, 0.419, -6.415, 0.0563, 0.741, 6.59e-05, 0.096, 0.227, 119.065])\n",
+      "('weve_never_met_but_can_we_have_a_cup_of_coffee_or_something', 'in_love_with_a_ghost', [0.349, 0.214, -18.295, 0.0538, 0.926, 0.121, 0.321, 0.236, 201.128])\n",
+      "('piano_song', 'eryn_allen_kane', [0.469, 0.518, -6.206, 0.0526, 0.669, 8.59e-06, 0.0869, 0.163, 59.381])\n",
+      "('tacones_rojos', 'sebastian_yatra', [0.748, 0.856, -3.517, 0.0348, 0.0824, 0, 0.142, 0.927, 123.031])\n",
+      "('violin_concerto_no_1_in_a_minor', 'johann_sebastian_bach', [0.22, 0.0423, -23.714, 0.0452, 0.914, 0.003, 0.121, 0.0776, 105.398])\n",
+      "('candy', 'baekhyun', [0.649, 0.767, -3.838, 0.0455, 0.24, 0, 0.0929, 0.608, 149.918])\n",
+      "('whisper', 'boombox_cartel', [0.505, 0.848, -2.174, 0.0823, 0.168, 0.000121, 0.116, 0.281, 150.04])\n",
+      "('in_the_name_of_love', 'martin_garrix', [0.501, 0.519, -5.88, 0.0409, 0.109, 0, 0.454, 0.168, 133.99])\n",
+      "('brukka', 'jack_and_lewis', [0.847, 0.889, -5.71, 0.108, 0.0143, 0.83, 0.0548, 0.213, 104.945])\n",
+      "('bum_bum_tam_tam', 'mc_fioti', [0.896, 0.675, -3.908, 0.124, 0.346, 8.11e-06, 0.262, 0.659, 131.999])\n",
+      "('partition', 'beyonce', [0.412, 0.441, -11.523, 0.291, 0.0296, 0.0726, 0.306, 0.174, 185.571])\n",
+      "('greedy', 'ariana_grande', [0.619, 0.705, -5.335, 0.099, 0.0323, 0, 0.0919, 0.844, 109.975])\n",
+      "('idontwannabeyouanymore', 'billie_eilish', [0.483, 0.412, -8.461, 0.0402, 0.737, 0, 0.116, 0.247, 170.163])\n",
+      "('lost_in_japan', 'shawn_mendes', [0.713, 0.738, -6.784, 0.374, 0.255, 0, 0.106, 0.425, 105.027])\n",
+      "('the_saints', 'andy_mineo', [0.763, 0.913, -5.129, 0.295, 0.0425, 0, 0.0848, 0.839, 144.067])\n",
+      "('dynamite', 'bts', [0.746, 0.765, -4.41, 0.0993, 0.0112, 0, 0.0936, 0.737, 114.044])\n"
      ]
     }
    ],
@@ -261,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,20 +327,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a_thousand_miles vanessa_carlton\n"
+      "dynamite bts\n"
      ]
     }
    ],
    "source": [
     "maxDiffs = find_closest_song(ypred_test[0])\n",
     "print(song_artist_features[i][0], song_artist_features[i][1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_recommendations_for_song(song):\n",
+    "    results = sp.recommendations(seed_tracks=[song['id']], limit=5)\n",
+    "    print(\"Recommendations:\")\n",
+    "    for track in results['tracks']:\n",
+    "        print(\"TRACK: \",track['name'], \" - \",track['artists'][0]['name'])\n",
+    "        sp.add_to_queue(track['uri'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recommendations:\n",
+      "TRACK:  FANCY  -  TWICE\n",
+      "TRACK:  double take  -  dhruv\n",
+      "TRACK:  DRUM GO DUM  -  K/DA\n",
+      "TRACK:  WIN - \"The God of HighSchool\" ED  -  CIX\n",
+      "TRACK:  Plot Twist  -  NIKI\n"
+     ]
+    }
+   ],
+   "source": [
+    "song = get_song(song_artist_features[i][0], song_artist_features[i][1])\n",
+    "if song:\n",
+    "    show_recommendations_for_song(song)"
    ]
   },
   {
