Update recommend.py with final reg model

--- a/regression_song_matching.ipynb
+++ b/regression_song_matching.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,9 @@
     "\n",
     "    audio_feat = []\n",
     "    \n",
+    "    if(song_features[0] is None):\n",
+    "        return None\n",
+    "    \n",
     "    audio_feat.append(song_features[0].get('danceability'))\n",
     "    audio_feat.append(song_features[0].get('energy'))\n",
     "    audio_feat.append(song_features[0].get('loudness'))\n",
@@ -68,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,13 +233,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def show_feature_based_recommendations_for_song(audio_features):\n",
-    "    kwargs = {\"target_danceability\":audio_features[0], \"target_energy\":audio_features[1], \"target_speechiness\":audio_features[2], \"target_loudness\":audio_features[3], \"target_acousticness\":audio_features[4], \"target_instrumentalness\":audio_features[5], \"target_liveness\":audio_features[6], \"target_valence\":audio_features[7], \"target_tempo\":audio_features[8]}\n",
-    "    results = sp.recommendations(seed_artists=None, seed_genres=['alternative', 'pop', 'dance'], seed_tracks=None, limit=5, country=None, **kwargs)\n",
+    "    kwargs = {\"min_danceability\":float(audio_features[0])-.1,\n",
+    "          \"target_danceability\":audio_features[0],\n",
+    "          \"max_danceability\":float(audio_features[0])+.1,\n",
+    "          \"min_energy\":float(audio_features[1])-.1,\n",
+    "          \"target_energy\":audio_features[1],\n",
+    "          \"max_energy\":float(audio_features[1])+.1,\n",
+    "          \"min_speechiness\":float(audio_features[3])-.1,\n",
+    "          \"target_speechiness\":audio_features[3],\n",
+    "          \"max_speechiness\":float(audio_features[3])+.1,\n",
+    "          \"min_loudness\":float(audio_features[2])-30,\n",
+    "          \"target_loudness\":audio_features[2],\n",
+    "          \"max_loudness\":float(audio_features[2])+30,\n",
+    "          \"min_acousticness\":float(audio_features[4])-.25,\n",
+    "          \"target_acousticness\":audio_features[4],\n",
+    "          \"max_acousticness\":float(audio_features[4])+.25,\n",
+    "          \"min_instrumentalness\":float(audio_features[5])-.1,\n",
+    "          \"target_instrumentalness\":audio_features[5],\n",
+    "          \"max_instrumentalness\":float(audio_features[5])+.1,\n",
+    "          \"min_liveness\":float(audio_features[6])-.25,\n",
+    "          \"target_liveness\":audio_features[6],\n",
+    "          \"max_liveness\":float(audio_features[6])+.25,\n",
+    "          \"min_valence\":float(audio_features[7])-.2,\n",
+    "          \"target_valence\":audio_features[7],\n",
+    "          \"max_valence\":float(audio_features[7])+.2,\n",
+    "          \"min_tempo\":float(audio_features[8])-20,\n",
+    "          \"target_tempo\":audio_features[8],\n",
+    "          \"max_tempo\":float(audio_features[8])+20\n",
+    "          }\n",
+    "    results = sp.recommendations(seed_artists=None, seed_genres=['alternative', 'pop', 'dance'], seed_tracks=None, limit=10, country=None, **kwargs)\n",
     "    print(\"Feature-based Recommendations:\")\n",
     "    for track in results['tracks']:\n",
     "        print(\"TRACK: \",track['name'], \" - \",track['artists'][0]['name'])\n",
@@ -245,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,219 +366,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('thats_what_i_like', 'bruno_mars', [0.853, 0.56, -4.961, 0.0406, 0.013, 0, 0.0944, 0.86, 134.066])\n",
-      "('humble', 'kendrick_lamar', [0.908, 0.621, -6.638, 0.102, 0.000282, 5.39e-05, 0.0958, 0.421, 150.011])\n",
-      "('skeletons', 'keshi', [0.719, 0.265, -12.782, 0.0754, 0.296, 0.0865, 0.108, 0.273, 80.021])\n",
-      "('slow_dancing_in_the_dark', 'joji', [0.515, 0.479, -7.458, 0.0261, 0.544, 0.00598, 0.191, 0.284, 88.964])\n",
-      "('lite_spots', 'kaytranada', [0.884, 0.549, -11.683, 0.471, 0.0346, 0.0698, 0.112, 0.394, 120.461])\n",
-      "('woman', 'doja_cat', [0.824, 0.764, -4.175, 0.0854, 0.0888, 0.00294, 0.117, 0.881, 107.998])\n",
-      "('get_up', 'ciara', [0.964, 0.595, -6.887, 0.109, 0.0248, 5.14e-06, 0.0405, 0.629, 128.593])\n",
-      "('throwin_elbows', 'excision', [0.574, 0.94, -3.038, 0.569, 0.00317, 0.0431, 0.113, 0.362, 149.988])\n",
-      "('power', 'little mix', [0.566, 0.855, -4.016, 0.211, 0.0372, 0.000157, 0.181, 0.517, 172.966])\n",
-      "('peaches', 'justin_bieber', [0.677, 0.696, -6.181, 0.119, 0.321, 0, 0.42, 0.464, 90.03])\n",
-      "('knife_talk', 'drake', [0.849, 0.424, -9.579, 0.324, 0.0635, 0, 0.0834, 0.153, 145.887])\n",
-      "('fool_around', 'yas', [0.635, 0.476, -10.101, 0.0639, 0.685, 9.14e-06, 0.14, 0.26, 119.738])\n",
-      "('levitating', 'dua_lipa', [0.702, 0.825, -3.787, 0.0601, 0.00883, 0, 0.0674, 0.915, 102.977])\n",
-      "('easily', 'bruno_major', [0.772, 0.256, -8.545, 0.0481, 0.491, 0.00612, 0.144, 0.357, 118.902])\n",
-      "('good_4_u', 'olivia_rodrigo', [0.563, 0.664, -5.044, 0.154, 0.335, 0, 0.0849, 0.688, 166.928])\n",
-      "('all_i_wanna_do', 'jay_park', [0.613, 0.668, -6.867, 0.267, 0.245, 0, 0.0735, 0.509, 96.176])\n",
-      "('sad_girlz_luv_money', 'amaarae', [0.87, 0.523, -8.052, 0.0602, 0.433, 2.07e-05, 0.113, 0.319, 110.02])\n",
-      "('tik_tok', 'kesha', [0.755, 0.837, -2.718, 0.142, 0.0991, 0, 0.289, 0.714, 120.028])\n",
-      "('ymca', 'village_people', [0.715, 0.951, -6.488, 0.132, 0.152, 0, 0.302, 0.671, 126.643])\n",
-      "('intuition_interlude', 'jamie_foxx', [0.676, 0.412, -11.343, 0.0913, 0.0424, 8.91e-06, 0.0609, 0.565, 168.05])\n",
-      "('kilby_girl', 'the_backseat_lovers', [0.329, 0.444, -9.973, 0.0417, 0.0578, 0.0352, 0.113, 0.225, 162.279])\n",
-      "('party_rock_anthem', 'lmfao', [0.75, 0.727, -4.21, 0.142, 0.0189, 0, 0.266, 0.359, 129.993])\n",
-      "('frozen', 'sabrina_claudio', [0.486, 0.419, -6.415, 0.0563, 0.741, 6.59e-05, 0.096, 0.227, 119.065])\n",
-      "('weve_never_met_but_can_we_have_a_cup_of_coffee_or_something', 'in_love_with_a_ghost', [0.349, 0.214, -18.295, 0.0538, 0.926, 0.121, 0.321, 0.236, 201.128])\n",
-      "('piano_song', 'eryn_allen_kane', [0.469, 0.518, -6.206, 0.0526, 0.669, 8.59e-06, 0.0869, 0.163, 59.381])\n",
-      "('tacones_rojos', 'sebastian_yatra', [0.748, 0.856, -3.517, 0.0348, 0.0824, 0, 0.142, 0.927, 123.031])\n",
-      "('violin_concerto_no_1_in_a_minor', 'johann_sebastian_bach', [0.22, 0.0423, -23.714, 0.0452, 0.914, 0.003, 0.121, 0.0776, 105.398])\n",
-      "('candy', 'baekhyun', [0.649, 0.767, -3.838, 0.0455, 0.24, 0, 0.0929, 0.608, 149.918])\n",
-      "('whisper', 'boombox_cartel', [0.505, 0.848, -2.174, 0.0823, 0.168, 0.000121, 0.116, 0.281, 150.04])\n",
-      "('in_the_name_of_love', 'martin_garrix', [0.501, 0.519, -5.88, 0.0409, 0.109, 0, 0.454, 0.168, 133.99])\n",
-      "('brukka', 'jack_and_lewis', [0.847, 0.889, -5.71, 0.108, 0.0143, 0.83, 0.0548, 0.213, 104.945])\n",
-      "('bum_bum_tam_tam', 'mc_fioti', [0.896, 0.675, -3.908, 0.124, 0.346, 8.11e-06, 0.262, 0.659, 131.999])\n",
-      "('partition', 'beyonce', [0.412, 0.441, -11.523, 0.291, 0.0296, 0.0726, 0.306, 0.174, 185.571])\n",
-      "('greedy', 'ariana_grande', [0.619, 0.705, -5.335, 0.099, 0.0323, 0, 0.0919, 0.844, 109.975])\n",
-      "('idontwannabeyouanymore', 'billie_eilish', [0.483, 0.412, -8.461, 0.0402, 0.737, 0, 0.116, 0.247, 170.163])\n",
-      "('lost_in_japan', 'shawn_mendes', [0.713, 0.738, -6.784, 0.374, 0.255, 0, 0.106, 0.425, 105.027])\n",
-      "('the_saints', 'andy_mineo', [0.763, 0.913, -5.129, 0.295, 0.0425, 0, 0.0848, 0.839, 144.067])\n",
-      "('dynamite', 'bts', [0.746, 0.765, -4.41, 0.0993, 0.0112, 0, 0.0936, 0.737, 114.044])\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(len(song_artist_features)):\n",
-    "    print(song_artist_features[i])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = pd.read_csv(\"parser_output/extracted_features_split_3_28_upsample.csv\")\n",
-    "data = data.dropna()\n",
-    "\n",
-    "y = data[['danceability', 'energy', 'loudness', 'speechiness', 'acousticness', 'instrumentalness', 'liveness', 'valence', 'tempo']]\n",
-    "x = data[data.columns[1:len(data.columns)-12]]\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size=0.7)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "LINEAR REGRESSION\n",
-      "Train Score: \n",
-      "0.890966273771685\n",
-      "Test Score: \n",
-      "-0.4849725795103919\n"
-     ]
-    }
-   ],
-   "source": [
-    "#lINEAR REGRESSION - \n",
-    "reg_model = LinearRegression().fit(X_train, y_train)\n",
-    "ypred_train = reg_model.predict(X_train)\n",
-    "ypred_test = reg_model.predict(X_test)\n",
-    "print(\"LINEAR REGRESSION\")\n",
-    "print(\"Train Score: \")\n",
-    "print(r2_score(y_train, ypred_train))\n",
-    "print(\"Test Score: \")\n",
-    "print(r2_score(y_test, ypred_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#SAVED MODEL\n",
-    "filename = 'tempModel.sav'\n",
+    "filename = 'model_final.sav'\n",
     "model = pickle.load(open(filename, 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\mbase\\anaconda3\\lib\\site-packages\\sklearn\\base.py:488: FutureWarning: The feature names should match those that were passed during fit. Starting version 1.2, an error will be raised.\n",
-      "Feature names must be in the same order as they were in fit.\n",
-      "\n",
-      "  warnings.warn(message, FutureWarning)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#HANDLE MOTION DATA\n",
-    "#[x_data, y_data] = preprocess(\"recorded.csv\")\n",
-    "[x_data, y_data] = preprocess(\"data/10_ymca_village_people.csv\")\n",
+    "[x_data, y_data] = preprocess(\"data/13_easily_bruno_major.csv\")\n",
     "extracted_features = parse(x_data, y_data)\n",
+    "selected_features = pd.read_csv(\"Selected_Feature_List.csv\")[\"0\"].to_numpy()\n",
+    "extracted_features = extracted_features[selected_features]\n",
     "predicted_audio_features = model.predict(extracted_features)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 7.52104132e-01,  6.25081575e-01, -6.92881577e+00,  1.69318266e-01,\n",
-       "        1.67443075e-01,  2.11457337e-02,  1.44985359e-01,  5.14697396e-01,\n",
-       "        1.20635275e+02])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predicted_audio_features[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "remove_tempo = predicted_audio_features[0][0:len(predicted_audio_features[0])-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "160\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array(['0.7521041317226747', '0.6250815752520746', '-6.9288157745177354',\n",
-       "       '0.16931826563919727', '0.1674430749940424',\n",
-       "       '0.021145733704304694', '0.14498535897841688',\n",
-       "       '0.5146973956601429', '160'], dtype='<U32')"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "remove_tempo = predicted_audio_features[0][0:len(predicted_audio_features[0])-1]\n",
     "tempo = input()\n",
-    "append_tempo = np.append(remove_tempo, tempo)\n",
-    "append_tempo"
+    "append_tempo = np.append(remove_tempo, tempo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Feature-based Recommendations:\n",
-      "TRACK:  Clint Eastwood  -  Gorillaz\n",
-      "TRACK:  Fitzpleasure  -  alt-J\n",
-      "TRACK:  Redbone  -  Childish Gambino\n",
-      "TRACK:  Poison (feat. Krept & Konan) - Zdot Remix  -  Rita Ora\n",
-      "TRACK:  Sweater Weather  -  The Neighbourhood\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "oAuth = SpotifyOAuth(client_id = CLIENT_ID, client_secret = CLIENT_SECRET, redirect_uri = REDIRECT_URL, scope = 'user-modify-playback-state')\n",
     "sp = spotipy.Spotify(auth_manager =oAuth)\n",
