--- a/classification_model.ipynb
+++ b/classification_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -838,7 +838,7 @@
     "CLIENT_SECRET= \"b66dc3a5f9f34207bebee32a25745368\"\n",
     "REDIRECT_URL=\"http://localhost/\"\n",
     "client_credentials_manager = SpotifyClientCredentials(client_id = CLIENT_ID, client_secret = CLIENT_SECRET)\n",
-    "oAuth = SpotifyOAuth(client_id = CLIENT_ID, client_secret = CLIENT_SECRET, redirect_uri = REDIRECT_URL, scope = 'user-modify-playback-state')\n",
+    "oAuth = SpotifyOAuth(client_id = CLIENT_ID, client_secret = CLIENT_SECRET, redirect_uri = REDIRECT_URL, scope = 'user-modify-playback-state,playlist-modify-public')\n",
     "sp = spotipy.Spotify(auth_manager =oAuth)\n",
     "\n",
     "song_name_list = ['love_girl', 'party_rock_anthem', 'lite_spots', 'girlfriends_best_friend', 'scaredy_cat', \n",
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1424,6 +1424,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scratch space for getting song album covers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image\n",
+    "import requests\n",
+    "import pprint\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def show_recommendations_for_song(song):\n",
+    "    results = sp.recommendations(seed_tracks=[song['id']], limit=5)\n",
+    "    print(\"Recommendations:\")\n",
+    "    for track in results['tracks']:\n",
+    "        print(\"TRACK: \",track['name'], \" - \",track['artists'][0]['name'])\n",
+    "\n",
+    "    return [track['uri'] for track in results['tracks']]\n",
+    "#     return [track[]]\n",
+    "#         im = Image.open(requests.get(url, stream=True).raw)\n",
+    "#         im.show()\n",
+    "       # sp.add_to_queue(track['uri'])\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('thats_what_i_like', 'bruno_mars')\n",
+      "Recommendations:\n",
+      "TRACK:  Love On The Brain  -  Rihanna\n",
+      "TRACK:  One Call Away  -  Charlie Puth\n",
+      "TRACK:  OMG (feat. Quavo)  -  Camila Cabello\n",
+      "TRACK:  Pull-Up  -  Jason Derulo\n",
+      "TRACK:  Finesse - Remix; feat. Cardi B  -  Bruno Mars\n"
+     ]
+    }
+   ],
+   "source": [
+    "prediction = '1'\n",
+    "artist_song = song_artist_pairs[prediction]\n",
+    "print(artist_song)\n",
+    "\n",
+    "song = get_song(artist_song[0], artist_song[1])\n",
+    "recs = show_recommendations_for_song(song)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myId = sp.current_user()['id']\n",
+    "playlistInfo = sp.user_playlist_create(myId, 'First playlist', True, False, 'No description')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'collaborative': False,\n",
+       " 'description': 'No description',\n",
+       " 'external_urls': {'spotify': 'https://open.spotify.com/playlist/2hEa97fAVWsIyYoSVbYRnQ'},\n",
+       " 'followers': {'href': None, 'total': 0},\n",
+       " 'href': 'https://api.spotify.com/v1/playlists/2hEa97fAVWsIyYoSVbYRnQ',\n",
+       " 'id': '2hEa97fAVWsIyYoSVbYRnQ',\n",
+       " 'images': [],\n",
+       " 'name': 'First playlist',\n",
+       " 'owner': {'display_name': 'Reverse Choreography',\n",
+       "  'external_urls': {'spotify': 'https://open.spotify.com/user/kjr1yvnen7f6hyq3fwdvpsqrm'},\n",
+       "  'href': 'https://api.spotify.com/v1/users/kjr1yvnen7f6hyq3fwdvpsqrm',\n",
+       "  'id': 'kjr1yvnen7f6hyq3fwdvpsqrm',\n",
+       "  'type': 'user',\n",
+       "  'uri': 'spotify:user:kjr1yvnen7f6hyq3fwdvpsqrm'},\n",
+       " 'primary_color': None,\n",
+       " 'public': True,\n",
+       " 'snapshot_id': 'MSw4MzlkZDFiMjI1ZWY3NmRlYjg5MGI0Nzg1N2JmMjhjYTg0MzM5YTVj',\n",
+       " 'tracks': {'href': 'https://api.spotify.com/v1/playlists/2hEa97fAVWsIyYoSVbYRnQ/tracks',\n",
+       "  'items': [],\n",
+       "  'limit': 100,\n",
+       "  'next': None,\n",
+       "  'offset': 0,\n",
+       "  'previous': None,\n",
+       "  'total': 0},\n",
+       " 'type': 'playlist',\n",
+       " 'uri': 'spotify:playlist:2hEa97fAVWsIyYoSVbYRnQ'}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "playlistInfo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['spotify:track:5oO3drDxtziYU2H1X23ZIp',\n",
+      " 'spotify:track:6vSforRhuzsA0D0SO9fG1S',\n",
+      " 'spotify:track:4xBjsLUSjcx2h7PcRikpQp',\n",
+      " 'spotify:track:1SYqEFrLotYNBTJbNXKEa5',\n",
+      " 'spotify:track:3Vo4wInECJQuz9BIBMOu8i']\n"
+     ]
+    }
+   ],
+   "source": [
+    "pprint.pprint(recs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'snapshot_id': 'Myw1M2I0ODJiOGQ3YmE4NDY3ZjU5YjExMDUyZTUzNjkzNzg5YzRiNGY3'}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sp.user_playlist_add_tracks(myId, playlistInfo['id'], recs)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1433,7 +1596,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1447,7 +1610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
